Update styles for background cover. Alignment fix in index.html

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-body{
-
+body, html {
+    width: 100%;
+    height: 100%;
 }
 .form-control::-moz-placeholder{
    color: #DDDDDD;
@@ -614,7 +615,7 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 
 @media (max-width: 768px){
     .navbar-transparent{
-        padding-top: 0px;
+        padding-top: 0;
         background-color: rgba(0, 0, 0, 0.75);
     }
     .navbar-transparent .navbar-collapse.in .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-transparent .navbar-collapse.in .navbar-nav .open .dropdown-menu > li > a:focus, .navbar-transparent .dropdown-menu > li > a:hover, .navbar-transparent .dropdown-menu > li > a:focus, [class*="navbar-ct"] .dropdown-menu > li > a:hover, [class*="navbar-ct"] .dropdown-menu > li > a:focus{
@@ -659,15 +660,15 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
     min-width: 100%;
     top: 0;
     width: auto;
-    background-size: 100%;
+    /*background-size: 100%;*/
     background-repeat: no-repeat;
 }
 .cover{
     position: fixed;
     opacity: 1;
     background-color: rgba(0,0,0,.6);
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
@@ -750,16 +751,15 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 }
 #video_background {
     position: fixed;
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     min-width: 100%;
     min-height: 100%;
     width: auto;
     height: auto;
     z-index: 1;
     overflow: hidden;
-    background-image: url('../images/video_bg.png');
-    background-position: center center;
+    background: url('../images/video_bg.png') center center;
     background-size: cover;
 
 }
@@ -767,8 +767,8 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
     position: fixed;
     opacity: 0.6;
     background-color: rgba(0,0,0,.45);
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
@@ -777,7 +777,7 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 .footer{
     position: relative;
     bottom: 20px;
-    right: 0px;
+    right: 0;
     width: 100%;
     color: #AAAAAA;
     z-index: 4;
@@ -832,7 +832,7 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 
 .fixed-plugin{
     position: fixed;
-    top:0px;
+    top:0;
     right: 50px;
     z-index: 1031;
 }
@@ -916,17 +916,14 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 
 .appBackground {
     position: relative;
-    background-image: url("../images/fujisanflex.JPG");
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url("../images/fujisanflex.JPG") no-repeat fixed center;
     background-size: cover;
 }
 
 @media (max-width:768px){
     .fixed-plugin{
         top: 80px;
-        right: 0px;
+        right: 0;
     }
     .main .container{
         margin-bottom: 50px;
